Misc clean ups.
- else { if } -> else if
- new kind of Number() -> valueOf()
- String replaceAll(S,S) -> replace(CS,CS)
- Initialize collections on creation
- Use diamonds
- Create arrays with {}s.