@@ -79,7 +79,7 @@ public class TestBaseNullConfiguration
         assertEquals("This returns 1(byte)", oneB, config.getByte("number"));
         assertEquals("This returns 1(byte)", oneB, config.getByte("number", twoB));
         assertEquals("This returns 2(default byte)", twoB, config.getByte("numberNotInConfig", twoB));
-        assertEquals("This returns 1(Byte)", new Byte(oneB), config.getByte("number", new Byte("2")));
+        assertEquals("This returns 1(Byte)", Byte.valueOf(oneB), config.getByte("number", Byte.valueOf("2")));
     }
 
     @Test(expected = NoSuchElementException.class)
@@ -104,7 +104,7 @@ public class TestBaseNullConfiguration
         assertEquals("This returns 1(short)", oneS, config.getShort("numberS"));
         assertEquals("This returns 1(short)", oneS, config.getShort("numberS", twoS));
         assertEquals("This returns 2(default short)", twoS, config.getShort("numberNotInConfig", twoS));
-        assertEquals("This returns 1(Short)", new Short(oneS), config.getShort("numberS", new Short("2")));
+        assertEquals("This returns 1(Short)", Short.valueOf(oneS), config.getShort("numberS", Short.valueOf("2")));
     }
 
     @Test(expected = NoSuchElementException.class)
@@ -129,7 +129,7 @@ public class TestBaseNullConfiguration
         assertEquals("This returns 1(long)", oneL, config.getLong("numberL"));
         assertEquals("This returns 1(long)", oneL, config.getLong("numberL", twoL));
         assertEquals("This returns 2(default long)", twoL, config.getLong("numberNotInConfig", twoL));
-        assertEquals("This returns 1(Long)", new Long(oneL), config.getLong("numberL", new Long("2")));
+        assertEquals("This returns 1(Long)", Long.valueOf(oneL), config.getLong("numberL", Long.valueOf("2")));
     }
 
     @Test(expected = NoSuchElementException.class)
@@ -154,7 +154,7 @@ public class TestBaseNullConfiguration
         assertEquals("This returns 1(float)", oneF, config.getFloat("numberF"), 0);
         assertEquals("This returns 1(float)", oneF, config.getFloat("numberF", twoF), 0);
         assertEquals("This returns 2(default float)", twoF, config.getFloat("numberNotInConfig", twoF), 0);
-        assertEquals("This returns 1(Float)", new Float(oneF), config.getFloat("numberF", new Float("2")));
+        assertEquals("This returns 1(Float)", Float.valueOf(oneF), config.getFloat("numberF", Float.valueOf("2")));
     }
 
     @Test(expected = NoSuchElementException.class)
@@ -179,7 +179,7 @@ public class TestBaseNullConfiguration
         assertEquals("This returns 1(double)", oneD, config.getDouble("numberD"), 0);
         assertEquals("This returns 1(double)", oneD, config.getDouble("numberD", twoD), 0);
         assertEquals("This returns 2(default double)", twoD, config.getDouble("numberNotInConfig", twoD), 0);
-        assertEquals("This returns 1(Double)", new Double(oneD), config.getDouble("numberD", new Double("2")));
+        assertEquals("This returns 1(Double)", Double.valueOf(oneD), config.getDouble("numberD", Double.valueOf("2")));
     }
 
     @Test(expected = NoSuchElementException.class)
@@ -272,7 +272,7 @@ public class TestBaseNullConfiguration
         assertEquals("This returns true", boolT, config.getBoolean("boolA"));
         assertEquals("This returns true, not the default", boolT, config.getBoolean("boolA", boolF));
         assertEquals("This returns false(default)", boolF, config.getBoolean("boolNotInConfig", boolF));
-        assertEquals("This returns true(Boolean)", new Boolean(boolT), config.getBoolean("boolA", new Boolean(boolF)));
+        assertEquals("This returns true(Boolean)", Boolean.valueOf(boolT), config.getBoolean("boolA", Boolean.valueOf(boolF)));
     }
 
     @Test(expected = NoSuchElementException.class)
